test/parser/programs/invalid/while1.guav
while True {
   ret True
   ret False
}
